; ModuleID = '/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_SetMediaStoppedAction.c'
source_filename = "/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_SetMediaStoppedAction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@.str = private unnamed_addr constant [15 x i8] c"play-and-pause\00", align 1
@VLC_PLAYER_MEDIA_STOPPED_PAUSE = common dso_local global i32 0, align 4
@on_media_stopped_action_changed = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_player_SetMediaStoppedAction(%struct.TYPE_6__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %6 = call i32 @vlc_player_assert_locked(%struct.TYPE_6__* %5)
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @VLC_PLAYER_MEDIA_STOPPED_PAUSE, align 4
  %13 = icmp eq i32 %11, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @var_SetBool(%struct.TYPE_6__* %10, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %17 = load i32, i32* @on_media_stopped_action_changed, align 4
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @vlc_player_SendEvent(%struct.TYPE_6__* %16, i32 %17, i32 %18)
  ret void
}

declare dso_local i32 @vlc_player_assert_locked(%struct.TYPE_6__*) #1

declare dso_local i32 @var_SetBool(%struct.TYPE_6__*, i8*, i32) #1

declare dso_local i32 @vlc_player_SendEvent(%struct.TYPE_6__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
